apps/ascii-frontend/kustomize/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: ascii-frontend-preview
spec:
  selector:
    app: ascii-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
