apps/ascii-frontend/kustomize/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ascii-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  hosts:
    - "dev.ascii.fullstack.pw"
  gateways:
    - istio-system/default-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ascii-frontend.default.svc.cluster.local
            port:
              number: 80
